update data.sql